--- a/app/src/main/res/drawable/background_button.xml
+++ b/app/src/main/res/drawable/background_button.xml
@@ -25,6 +25,6 @@
         />
     <stroke
         android:width="5dp"
-        android:color="@color/m"
+        android:color="@color/s"
         />
 </shape>
