--- a/app/src/main/res/drawable/button_x.xml
+++ b/app/src/main/res/drawable/button_x.xml
@@ -26,6 +26,6 @@
         />
     <stroke
         android:width="5dp"
-        android:color="@color/m"
+        android:color="@color/s"
         />
 </shape>
