--- a/app/src/main/res/drawable/logical.xml
+++ b/app/src/main/res/drawable/logical.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-
     android:shape="rectangle" >
     <corners
         android:radius="45dp"
@@ -9,9 +8,9 @@
     <gradient
         android:angle="45"
         android:centerX="35%"
-        android:centerColor="@color/e"
-        android:startColor="@color/b"
-        android:endColor="@color/b"
+        android:centerColor="@color/k"
+        android:startColor="@color/a"
+        android:endColor="@color/a"
         android:type="linear"
         />
     <padding
@@ -21,11 +20,11 @@
         android:bottom="0dp"
         />
     <size
-        android:width="150dp"
-        android:height="40dp"
+        android:width="180dp"
+        android:height="55dp"
         />
     <stroke
         android:width="5dp"
-        android:color="@color/s"
+        android:color="@color/g"
         />
 </shape>
