--- a/app/src/main/res/drawable/textview.xml
+++ b/app/src/main/res/drawable/textview.xml
@@ -9,7 +9,7 @@
     <gradient
         android:angle="45"
         android:centerX="40%"
-        android:centerColor="@color/h"
+        android:centerColor="@color/l"
         android:startColor="@color/b"
         android:endColor="@color/b"
         android:type="linear"
@@ -22,7 +22,7 @@
         />
     <size
         android:width="350dp"
-        android:height="50dp"
+        android:height="40dp"
         />
     <stroke
         android:width="5dp"
