--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -14,85 +14,71 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:weightSum="5"
+        android:weightSum="4"
         android:padding="5dp"
         android:orientation="vertical">
 
-        <LinearLayout
+        <EditText
+            android:id="@+id/FullNameId"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="5dp"
             android:layout_weight="1"
-            android:orientation="horizontal">
+            android:inputType="textPersonName"
+            android:textColor="@color/h"
+            android:textStyle="bold"
+            android:background="@drawable/textview"
+            android:textSize="28dp"
+            android:drawableLeft="@drawable/ic_baseline_person_outline_24"
+            android:hint="FullName" />
 
-            <EditText
-                android:id="@+id/fullNameTextId"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:textSize="22dp"
-                android:inputType="textPersonName"
-                android:textStyle="bold"
-                android:textColor="@color/a"
-                android:drawableLeft="@drawable/ic_baseline_person_outline_24"
-                android:hint="Full Name" />
-
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            >
-
-            <EditText
-                android:id="@+id/userNameTextId"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:inputType="textEmailAddress"
-                android:textColor="@color/a"
-                android:textStyle="bold"
-                android:drawableLeft="@drawable/ic_baseline_person_outline_24"
-                android:textSize="22dp"
-                android:hint="User Name" />
-
-        </LinearLayout>
         <EditText
             android:id="@+id/emailTextId"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:inputType="textEmailAddress"
-            android:textColor="@color/a"
+            android:textColor="@color/h"
             android:textStyle="bold"
+            android:background="@drawable/textview"
             android:drawableLeft="@drawable/ic_baseline_email_24"
-            android:textSize="22dp"
+            android:textSize="28dp"
             android:hint="Enter your Email" />
 
+
         <EditText
-            android:id="@+id/phoneTextId"
+            android:id="@+id/phoneNumberId"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:inputType="number"
-            android:textColor="@color/a"
+            android:textColor="@color/h"
             android:textStyle="bold"
+            android:textSize="28dp"
+            android:background="@drawable/textview"
             android:drawableLeft="@drawable/ic_baseline_local_phone_24"
-            android:textSize="22dp"
-            android:hint="Enter your phone number" />
+            android:hint="PhoneNumber" />
+
 
         <EditText
             android:id="@+id/passwordId"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:background="@drawable/textview"
             android:inputType="textPassword"
-            android:textColor="@color/a"
+
+            android:textColor="@color/h"
             android:textStyle="bold"
-            android:textSize="22dp"
+            android:textSize="28dp"
             android:drawableLeft="@drawable/ic_baseline_lock_24"
             android:hint="Password" />
+
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/progressBarId"
+            android:layout_gravity="center"
+            android:visibility="gone"/>
 
     </LinearLayout>
 
