--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -129,11 +129,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:layout_weight="1"
-            android:orientation="horizontal">
+            android:layout_weight="1">
 
             <Button
-                android:id="@+id/internetId"
+                android:id="@+id/checkInternetId"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="10dp"
@@ -141,7 +140,7 @@
                 android:textSize="24dp"
                 android:textColor="@color/d"
                 android:background="@drawable/internet"
-                android:text="Check Internet Speed" />
+                android:text="Check Internet Connection" />
 
         </LinearLayout>
         <LinearLayout
