--- a/app/src/main/res/layout/activity_current_location.xml
+++ b/app/src/main/res/layout/activity_current_location.xml
@@ -10,39 +10,31 @@
     tools:context=".CurrentLocation">
 
 
-    <Button
-        android:id="@+id/bt_location"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:textSize="26dp"
-        android:textStyle="bold"
-        android:textColor="@color/t"
-        android:background="@drawable/textview"
-        android:text="Get Location"/>
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="20dp"
-        android:background="@drawable/background_y"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/text_view1"
             android:layout_weight="1"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textStyle="bold"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/text"
             android:textSize="20dp"/>
 
         <TextView
             android:id="@+id/text_view2"
             android:layout_weight="1"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textStyle="bold"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/text"
             android:textSize="20dp"/>
     </LinearLayout>
 
@@ -52,23 +44,26 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="20dp"
-        android:background="@drawable/background_v"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/text_view3"
             android:layout_weight="1"
-            android:layout_width="0dp"
+            android:layout_marginBottom="10dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textStyle="bold"
+            android:background="@drawable/text"
             android:textSize="20dp"/>
 
         <TextView
             android:id="@+id/text_view4"
             android:layout_weight="1"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:textStyle="bold"
+            android:background="@drawable/text"
             android:textSize="20dp"/>
     </LinearLayout>
 
@@ -78,9 +73,41 @@
         android:layout_height="wrap_content"
         android:textStyle="bold"
         android:layout_marginTop="20dp"
+        android:background="@drawable/text"
         android:layout_gravity="center_horizontal"
         android:textSize="20dp"/>
 
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:layout_marginTop="20dp"
+        android:orientation="vertical">
+
+
+        <Button
+            android:id="@+id/bt_location"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:textSize="26dp"
+            android:textStyle="bold"
+            android:textColor="@color/t"
+            android:background="@drawable/textview"
+            android:text="Get Location"/>
+
+        <Button
+            android:id="@+id/saveLocation"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+            android:textSize="26dp"
+            android:textStyle="bold"
+            android:textColor="@color/t"
+            android:background="@drawable/textview"
+            android:text="Save Location"/>
+    </LinearLayout>
 
 </LinearLayout>
