--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -129,7 +129,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:layout_weight="1">
+            android:layout_weight="1"
+            android:orientation="vertical">
 
             <Button
                 android:id="@+id/checkInternetId"
@@ -141,6 +142,18 @@
                 android:textColor="@color/d"
                 android:background="@drawable/internet"
                 android:text="Check Internet Connection" />
+
+            <Button
+                android:id="@+id/distanceId"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
+                android:textAllCaps="false"
+                android:textSize="24dp"
+                android:layout_marginTop="10dp"
+                android:textColor="@color/d"
+                android:background="@drawable/internet"
+                android:text="Distance two places" />
 
         </LinearLayout>
         <LinearLayout
