--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -23,7 +23,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="35dp"
+            android:layout_height="20dp"
             android:layout_weight="1"
             android:orientation="horizontal"
             android:padding="4dp"
@@ -81,38 +81,63 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
-            android:layout_weight="1">
+            android:layout_weight="1"
+            android:orientation="vertical">
 
             <TextView
-                android:id="@+id/speedText"
+                android:id="@+id/distance"
                 android:layout_width="wrap_content"
                 android:textColor="@color/a"
                 android:textStyle="bold"
-                android:textSize="50sp"
+                android:textSize="25sp"
                 android:layout_gravity="center"
                 android:layout_height="wrap_content"
                 android:text="0.0 Km/h" />
 
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:layout_weight="1">
-
-            <androidx.appcompat.widget.SwitchCompat
-                android:id="@+id/switchId"
-                android:layout_width="200dp"
-                android:checked="true"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:textSize="25dp"
-                android:textStyle="bold"
+            <TextView
+                android:id="@+id/time"
+                android:layout_width="wrap_content"
                 android:textColor="@color/a"
-                android:layout_marginBottom="10dp"
-                android:text="Metric Units" />
+                android:textStyle="bold"
+                android:textSize="15sp"
+                android:layout_gravity="center"
+                android:layout_height="wrap_content"
+                android:text="0" />
+
         </LinearLayout>
+
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="bottom"
+                android:orientation="horizontal">
+                
+                <Button
+                    android:id="@+id/btnStart"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textAllCaps="false"
+                    android:text="Start"/>
+
+                <Button
+                    android:id="@+id/btnPause"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:textAllCaps="false"
+                    android:text="Pause"/>
+                <Button
+                    android:id="@+id/btnStop"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:textAllCaps="false"
+                    android:text="Stop"/>
+
+            </LinearLayout>
 
     </LinearLayout>
 
@@ -144,7 +169,7 @@
                 android:text="Check Internet Connection" />
 
             <Button
-                android:id="@+id/distanceId"
+                android:id="@+id/distanceTwoPlaceId"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="10dp"
