--- a/app/src/main/res/layout/activity_current_location.xml
+++ b/app/src/main/res/layout/activity_current_location.xml
@@ -85,29 +85,38 @@
         android:layout_marginTop="20dp"
         android:orientation="vertical">
 
-
         <Button
             android:id="@+id/bt_location"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:textSize="26dp"
+            android:textSize="28dp"
             android:textStyle="bold"
             android:textColor="@color/t"
+            android:textAllCaps="false"
             android:background="@drawable/textview"
             android:text="Get Location"/>
+    </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:gravity="center_horizontal">
         <Button
             android:id="@+id/saveLocation"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="10dp"
-            android:textSize="26dp"
+            android:textSize="28dp"
             android:textStyle="bold"
-            android:textColor="@color/t"
-            android:background="@drawable/textview"
-            android:text="Save Location"/>
+            android:layout_marginRight="10dp"
+            android:textAllCaps="false"
+            android:textColor="@color/a"
+            android:background="@drawable/button_y"
+            android:text="Save"/>
+
     </LinearLayout>
 
 </LinearLayout>
