--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -274,7 +274,7 @@
                 android:textSize="24dp"
                 android:textColor="@color/d"
                 android:background="@drawable/logical"
-                android:text="Gas Station" />
+                android:text="Nearby Place" />
             <Button
                 android:id="@+id/trackId"
                 android:layout_width="wrap_content"
