--- a/app/src/main/res/drawable/button_x.xml
+++ b/app/src/main/res/drawable/button_x.xml
@@ -9,7 +9,7 @@
     <gradient
         android:angle="45"
         android:centerX="30%"
-        android:centerColor="@color/d"
+        android:centerColor="@color/f"
         android:startColor="@color/b"
         android:endColor="@color/b"
         android:type="linear"
