--- a/app/src/main/res/layout/activity_current_location.xml
+++ b/app/src/main/res/layout/activity_current_location.xml
@@ -25,6 +25,7 @@
             android:textStyle="bold"
             android:layout_marginBottom="10dp"
             android:background="@drawable/text"
+            android:gravity="center"
             android:textSize="20dp"/>
 
         <TextView
@@ -34,6 +35,7 @@
             android:layout_height="wrap_content"
             android:textStyle="bold"
             android:layout_marginTop="10dp"
+            android:gravity="center"
             android:background="@drawable/text"
             android:textSize="20dp"/>
     </LinearLayout>
@@ -44,6 +46,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="20dp"
+        android:gravity="center"
         android:orientation="vertical">
 
         <TextView
@@ -53,14 +56,22 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textStyle="bold"
+            android:gravity="center"
             android:background="@drawable/text"
             android:textSize="20dp"/>
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/progressBarCurrentId"
+            android:layout_gravity="center"
+            android:visibility="gone"/>
 
         <TextView
             android:id="@+id/text_view4"
             android:layout_weight="1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="center"
             android:layout_marginTop="10dp"
             android:textStyle="bold"
             android:background="@drawable/text"
@@ -74,6 +85,7 @@
         android:textStyle="bold"
         android:layout_marginTop="20dp"
         android:background="@drawable/text"
+        android:gravity="center"
         android:layout_gravity="center_horizontal"
         android:textSize="20dp"/>
 
