--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -27,7 +27,7 @@
             android:layout_weight="2"
             android:orientation="horizontal"
             android:padding="4dp"
-            android:gravity="right">
+            android:gravity="center">
 
             <TextView
                 android:id="@+id/profileEmailTextId"
@@ -36,43 +36,10 @@
                 android:textColor="@color/y"
                 android:textStyle="bold"
                 android:textSize="22dp"
+                android:layout_gravity="center_horizontal"
                 android:gravity="center"
-                android:layout_marginRight="10dp"
                 android:background="@drawable/profilenametext"
                 />
-
-
-
-            <ImageButton
-                android:id="@+id/vehicleInformationButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/circle_menu"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginRight="5dp"
-                android:padding="5dp"
-                app:srcCompat="@drawable/ic_baseline_directions_bike_24" />
-
-
-            <ImageButton
-                android:id="@+id/profileSettingButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/circle_menu"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginRight="5dp"
-                android:padding="5dp"
-                app:srcCompat="@drawable/ic_baseline_settings_24" />
-
-            <ImageButton
-                android:id="@+id/logoutButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/circle_menu"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginRight="5dp"
-                android:padding="5dp"
-                app:srcCompat="@drawable/logout" />
 
 
         </LinearLayout>
@@ -162,9 +129,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="2"
-        android:weightSum="4"
+        android:weightSum="5"
         android:layout_margin="5dp"
-        android:background="@drawable/background_w"
         android:orientation="vertical">
 
         <LinearLayout
@@ -181,9 +147,18 @@
                 android:layout_marginRight="10dp"
                 android:textAllCaps="false"
                 android:textSize="24dp"
-                android:textColor="@color/d"
+                android:textColor="@color/a"
+                android:textStyle="bold"
                 android:background="@drawable/internet"
                 android:text="Check Internet Connection" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center">
+
 
             <Button
                 android:id="@+id/distanceTwoPlaceId"
@@ -192,11 +167,10 @@
                 android:layout_marginRight="10dp"
                 android:textAllCaps="false"
                 android:textSize="24dp"
-                android:layout_marginTop="10dp"
-                android:textColor="@color/d"
+                android:textColor="@color/a"
+                android:textStyle="bold"
                 android:background="@drawable/internet"
                 android:text="Distance two places" />
-
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -213,7 +187,8 @@
                 android:layout_marginRight="10dp"
                 android:textAllCaps="false"
                 android:textSize="24dp"
-                android:textColor="@color/d"
+                android:textColor="@color/a"
+                android:textStyle="bold"
                 android:background="@drawable/logical"
                 android:text="Statics" />
             <Button
@@ -223,7 +198,8 @@
                 android:layout_marginLeft="10dp"
                 android:textAllCaps="false"
                 android:textSize="24dp"
-                android:textColor="@color/d"
+                android:textColor="@color/a"
+                android:textStyle="bold"
                 android:background="@drawable/logical"
                 android:text="Get Location" />
         </LinearLayout>
@@ -242,7 +218,8 @@
                 android:layout_marginRight="10dp"
                 android:textAllCaps="false"
                 android:textSize="24dp"
-                android:textColor="@color/d"
+                android:textColor="@color/a"
+                android:textStyle="bold"
                 android:background="@drawable/logical"
                android:text="Vehicleinfo" />
             <Button
@@ -252,7 +229,8 @@
                 android:layout_marginLeft="10dp"
                 android:textAllCaps="false"
                 android:textSize="24dp"
-                android:textColor="@color/d"
+                android:textColor="@color/a"
+                android:textStyle="bold"
                 android:background="@drawable/logical"
                 android:text="Save Location"
                 />
@@ -272,7 +250,8 @@
                 android:layout_marginRight="10dp"
                 android:textAllCaps="false"
                 android:textSize="24dp"
-                android:textColor="@color/d"
+                android:textColor="@color/a"
+                android:textStyle="bold"
                 android:background="@drawable/logical"
                 android:text="Nearby Place" />
             <Button
@@ -282,7 +261,8 @@
                 android:layout_marginLeft="10dp"
                 android:textAllCaps="false"
                 android:textSize="24dp"
-                android:textColor="@color/d"
+                android:textColor="@color/a"
+                android:textStyle="bold"
                 android:background="@drawable/logical"
                  android:text="Track On" />
         </LinearLayout>
