--- a/app/src/main/res/layout/activity_vehicle.xml
+++ b/app/src/main/res/layout/activity_vehicle.xml
@@ -9,4 +9,109 @@
     android:padding="5dp"
     tools:context=".Vehicle">
 
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:textColor="@color/a"
+        android:textStyle="bold"
+        android:textSize="40dp"
+        android:gravity="center"
+        android:layout_marginTop="5dp"
+        android:text="Your Vehicle Information" />
+
+    <TextView
+        android:id="@+id/ownerNameText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="26dp"
+        android:textStyle="bold"
+        android:textColor="@color/a"
+        android:gravity="center"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/profilebackground"
+         />
+
+    <TextView
+        android:id="@+id/vehicleTypeText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="26dp"
+        android:textStyle="bold"
+        android:textColor="@color/a"
+        android:gravity="center"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/profilebackground"
+         />
+
+    <TextView
+        android:id="@+id/modelNameText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="26dp"
+        android:textStyle="bold"
+        android:textColor="@color/a"
+        android:gravity="center"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/profilebackground"
+         />
+
+    <TextView
+        android:id="@+id/registrationText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="26dp"
+        android:textStyle="bold"
+        android:textColor="@color/a"
+        android:gravity="center"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/profilebackground"
+         />
+
+    <TextView
+        android:id="@+id/registrationDateText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="26dp"
+        android:layout_marginTop="5dp"
+        android:textStyle="bold"
+        android:textColor="@color/a"
+        android:gravity="center"
+        android:background="@drawable/profilebackground"
+         />
+    <TextView
+        android:id="@+id/chassisNoText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="26dp"
+        android:textStyle="bold"
+        android:textColor="@color/a"
+        android:gravity="center"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/profilebackground"
+         />
+    <TextView
+        android:id="@+id/engineText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="26dp"
+        android:textStyle="bold"
+        android:textColor="@color/a"
+        android:gravity="center"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/profilebackground"
+        />
+    <TextView
+        android:id="@+id/fuelTypeText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="26dp"
+        android:textStyle="bold"
+        android:textColor="@color/a"
+        android:gravity="center"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/profilebackground"
+        />
+
 </LinearLayout>
