--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -59,7 +59,17 @@
                 android:textSize="25sp"
                 android:layout_gravity="center"
                 android:layout_height="wrap_content"
-                android:text="0.0 Km/h" />
+                android:text="Total Distance:" />
+            <TextView
+                android:id="@+id/speedtext"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:singleLine="true"
+                android:textStyle="bold"
+                android:text="Instantaneous Speed:"
+                android:textColor="@color/a"
+                android:textSize="18sp" />
 
             <TextView
                 android:id="@+id/time"
@@ -69,7 +79,7 @@
                 android:textSize="20sp"
                 android:layout_gravity="center"
                 android:layout_height="wrap_content"
-                android:text="0" />
+                android:text="Total Time" />
 
         </LinearLayout>
 
