--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/first"
+    android:background="@drawable/background_v"
     android:weightSum="4"
     android:padding="5dp"
     android:orientation="vertical"
@@ -33,7 +33,7 @@
                 android:id="@+id/profileEmailTextId"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/y"
+                android:textColor="@color/g"
                 android:textStyle="bold"
                 android:textSize="22dp"
                 android:layout_gravity="center_horizontal"
